--- a/src/Components/Count/Count.css
+++ b/src/Components/Count/Count.css
@@ -1,22 +1,38 @@
 .count {
   display: flex;
   justify-content: center;
-  align-items: center;gap: 15px;
+  align-items: center;
+  gap: 25px;
+  padding: 25px;
 }
 
-.countChangeBut{
-    background-color: orange;
-    width: 30px;
-    height: 30px;
-    padding: 0;
-    font-size: 19px;
-    border: 1px solid transparent;
-    transition: all 0.3s linear;
-    border-radius: 5px;
+.countChangeBut {
+  background-color: orange;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  font-size: 19px;
+  border: 1px solid transparent;
+  transition: all 0.3s linear;
+  border-radius: 5px;
 }
 
-.countChangeBut:hover{
-    background-color: #e2e2e2;
-    border: 1px solid orange;
-    color: orange;
+.countChangeBut:hover {
+  background-color: #e2e2e2;
+  border: 1px solid orange;
+  color: orange;
+}
+
+.inpt {
+  display: none;
+}
+
+.as {
+  width: 35px;
+  height: 50px;
+  border: 1px solid transparent;
+  background-color: #e2e2e2;
+  outline: none;
+  font-size: 19px;
+  font-weight: 900;
 }
